ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.4.3, 2.5.0
    • Affects Version/s: 2.4.1
    • Component/s: Networking
    • None
    • ALL
      • Start an SSL-enabled server with options: { sslCAFile: "ca.pem", sslOnNormalPorts: true, sslPEMKeyFile: "server.pem" }
      • Unzip the attached java program
      • Run ssltest.sh
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Message in logs looks like:

      Tue Apr  9 20:41:09.438 [initandlisten] connection accepted from 127.0.0.1:49758 #4 (3 connections now open)
      Tue Apr  9 20:41:09.440 [conn4] ERROR: error:140D9115:SSL routines:SSL_GET_PREV_SESSION:session id context uninitialized
      Tue Apr  9 20:41:09.440 [conn4] SocketException handling request, closing client connection: 9001 socket exception [6]
      

            Assignee:
            Eric Milkie
            Reporter:
            Jeffrey Yemin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: