src/mongo/util/net/ssl_manager.cpp
@@ -174,6 +174,15 @@ namespace mongo {
         // Note: this is for blocking sockets only.
         SSL_CTX_set_mode(_context, SSL_MODE_AUTO_RETRY);
 
+        // Set context within which session can be reused
+        int status = SSL_CTX_set_session_id_context(
+            _context,
+            static_cast<unsigned char*>(static_cast<void*>(&_context)),
+            sizeof(_context));
+        if (!status) {
+            uasserted(16768,"ssl initialization problem");
+        }
+
         SSLThreadInfo::init();
         SSLThreadInfo::get();
 
